<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="prueba.login.MainActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="60dp"
        android:paddingRight="65dp" >

        <ImageView
            android:id="@+id/imgLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/imgLogin"
            android:src="@drawable/logo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_below="@+id/linearLayout1"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/txtUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/txtUser"
            android:maxLength="15"
            android:maxLines="1"
            android:minLines="1"
            android:scrollHorizontally="false"
            android:singleLine="true" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/txtPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/txtPass"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/acceder"
            style="@style/AppBaseTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minWidth="64dip"
            android:text="@string/validarUser" />
    </LinearLayout>

</RelativeLayout>